--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@emotion/react": "^11.8.2",
         "@emotion/styled": "^11.8.1",
+        "@fontsource/roboto": "^4.5.3",
         "@mui/icons-material": "^5.5.1",
         "@mui/material": "^5.5.1",
         "@mui/styles": "^5.5.1",
@@ -19,6 +20,8 @@
         "react-dom": "^17.0.2",
         "react-file-base64": "^1.0.3",
         "react-google-login": "^5.2.2",
+        "react-lazyload": "^3.2.0",
+        "react-medium-image-zoom": "^4.3.5",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
