--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-CONNECTION_URI = mongodb+srv://admin:SXX6r7RxnM71aHAQ@cluster0.feupa.mongodb.net/test?retryWrites=true&w=majority
+CONNECTION_URI = mongodb+srv://admin:EBE2Ws3GHvdC7AFX@cluster0.doxvp.mongodb.net/test?retryWrites=true&w=majority
