--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
         "react-file-base64": "^1.0.3",
         "react-google-login": "^5.2.2",
         "react-lazyload": "^3.2.0",
+        "react-material-ui-carousel": "^3.3.3",
         "react-medium-image-zoom": "^4.3.5",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.2",
