--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "proxy": "http://localhost:5000",
     "dependencies": {
+        "@emotion/css": "^11.7.1",
         "@emotion/react": "^11.8.2",
         "@emotion/styled": "^11.8.1",
         "@fontsource/roboto": "^4.5.3",
@@ -14,6 +15,8 @@
         "@testing-library/react": "^12.1.4",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.26.1",
+        "image-extensions": "^1.1.0",
+        "is-url": "^1.2.4",
         "jwt-decode": "^3.1.2",
         "moment": "^2.29.1",
         "react": "^17.0.2",
@@ -30,6 +33,10 @@
         "redux-actions": "^2.6.5",
         "redux-saga": "^1.1.3",
         "redux-thunk": "^2.4.1",
+        "slate": "^0.76.0",
+        "slate-history": "^0.66.0",
+        "slate-hyperscript": "^0.67.0",
+        "slate-react": "^0.76.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
