--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:5000",
     "dependencies": {
         "@emotion/css": "^11.7.1",
         "@emotion/react": "^11.8.2",
@@ -62,5 +61,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "http-proxy-middleware": "^2.0.4"
     }
 }
