--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
         "react-dom": "^17.0.2",
         "react-file-base64": "^1.0.3",
         "react-google-login": "^5.2.2",
+        "react-helmet-async": "^1.3.0",
         "react-lazyload": "^3.2.0",
         "react-material-ui-carousel": "^3.3.3",
         "react-medium-image-zoom": "^4.3.5",
