--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
         "slate-history": "^0.66.0",
         "slate-hyperscript": "^0.67.0",
         "slate-react": "^0.76.0",
+        "uuid": "^8.3.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
