add search and change logo

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-CONNECTION_URI = mongodb+srv://admin:EBE2Ws3GHvdC7AFX@cluster0.doxvp.mongodb.net/test?retryWrites=true&w=majority
+CONNECTION_URI = mongodb+srv://admin:5DXdbk5MNYikEhtu@cluster0.xezgs.mongodb.net/artsunday?retryWrites=true&w=majority
