--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,11 @@
         "react-file-base64": "^1.0.3",
         "react-google-login": "^5.2.2",
         "react-helmet-async": "^1.3.0",
+        "react-imask": "^6.4.2",
         "react-lazyload": "^3.2.0",
         "react-material-ui-carousel": "^3.3.3",
         "react-medium-image-zoom": "^4.3.5",
+        "react-number-format": "^4.9.3",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
