--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,6 @@
 PORT = 5000
 CONNECTION_URI = mongodb+srv://admin:5DXdbk5MNYikEhtu@cluster0.xezgs.mongodb.net/artsunday?retryWrites=true&w=majority
+
+CLOUDINARY_NAME=dypbi98sc
+CLOUDINARY_KEY=937897232452321
+CLOUDINARY_SECRET=UrTPo8vJA3XV7Px7m5reKI0S8Jo
