--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@cloudinary/react": "^1.4.1",
+        "@cloudinary/url-gen": "^1.8.0",
         "@emotion/css": "^11.7.1",
         "@emotion/react": "^11.8.2",
         "@emotion/styled": "^11.8.1",
